# orkhon

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.tr.md  Makefile  NOTICE  README.md  README.tr.md  RELEASING.md  RELEASING.tr.md  SECURITY.md  SECURITY.tr.md  pyproject.toml
docs/: agents.md  agents.tr.md  build-your-own-llm-guide.md  build-your-own-llm-guide.tr.md  capability-roadmap.md  capability-roadmap.tr.md  eval.md  eval.tr.md  implementation-plan.md  implementation-plan.tr.md  lineage.md  lineage.tr.md  research-additions-2026.md  research-additions-2026.tr.md  research-additions.md  research-additions.tr.md  roadmap.md  roadmap.tr.md  scaling.md  scaling.tr.md  turkic-languages.md  turkic-languages.tr.md
models/: registry.md  registry.tr.md
reports/: README.md  README.tr.md  bumin_mini_unified_routed_eval_20260620.json  model_audit_20260620.json  tangri_unified_eval_20260620.json  tangri_unified_raw_eval_20260620.json  tangri_unified_routed_eval_20260620.json  tengri125_unified_baseline_chat_eval_20260620.json  tonyuk_unified_routed_eval_20260620.json
scripts/: eval_unified_assistant.py  make_unified_assistant_data.py  prepare_hf_family.py  smoke_all.sh  train_cloud.sh
tests/: conftest.py  test_agent_loop.py  test_api.py  test_api_agent.py  test_attention_gqa.py  test_chat_template.py  test_checkpoint_resume.py  test_cli.py  test_curate.py  test_data_pack.py  test_distillation.py  test_distributed.py  test_download.py  test_dpo_loss.py  test_engine_guard.py  test_export_parity.py  test_from_pretrained.py  test_generate_batch.py  test_generation.py  (+28 more)
(+254 files in other folders)
