[project]
name = "orkhon"
version = "0.1.0"
description = "Orkhon — a complete, auditable, from-scratch LLM stack (tokenizer → pretrain → SFT → DPO → eval → serve)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "torch>=2.4",
    "numpy>=1.26",
    "tokenizers>=0.20",
    "safetensors>=0.4",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "datasets>=2.19", "ruff>=0.8"]
# Optional: real-data ingestion (datasets) + open-base loading (transformers/hub).
hub = ["datasets>=2.19", "huggingface-hub>=0.23", "transformers>=4.44"]
# Optional: the Gradio demo Space.
demo = ["gradio>=4.0"]

[project.scripts]
orkhon = "orkhon.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orkhon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: end-to-end smoke runs (deselect with -m 'not slow')"]
